Fix overflowing App by removing unnecessary div.app

--- a/src/h5web/App.module.css
+++ b/src/h5web/App.module.css
@@ -1,7 +1,3 @@
-.app {
-  height: 100vh;
-}
-
 .explorer {
   display: flex;
   scrollbar-width: thin;
